// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas Component No props 1`] = `
<div
  className="diagram__container"
  id="_container"
>
  <canvas
    className="diagram__gl"
  />
  <div
    className="diagram__html"
  />
  <canvas
    className="diagram__text"
  />
</div>
`;

exports[`Canvas Component With id 1`] = `
<div
  className="diagram__container"
  id="test_id_container"
>
  <canvas
    className="diagram__gl"
  />
  <div
    className="diagram__html"
  />
  <canvas
    className="diagram__text"
  />
</div>
`;

exports[`Canvas Component function is called after render 1`] = `
<div
  className="diagram__container"
  id="test_id_container"
>
  <canvas
    className="diagram__gl"
  />
  <div
    className="diagram__html"
  />
  <canvas
    className="diagram__text"
  />
</div>
`;
